force-app/main/default/objects/Vote__c/Vote__c.object-meta.xml
<CustomObject>
    <description>Stores Individual Votes against Each Nominee</description>
    <label>Vote</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Vote ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>