force-app/main/default/objects/Vote__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <referenceTo>Title__c</referenceTo>
    <relationshipLabel>Received Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>