force-app/main/default/objects/Vote__c/fields/Voted_By__c.field-meta.xml
<CustomField>
    <fullName>Voted_By__c</fullName>
    <inlineHelpText>Candidate who submitted their Vote</inlineHelpText>
    <label>Voted By</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Given Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>