force-app/main/default/objects/Vote__c/fields/Voted_For__c.field-meta.xml
<CustomField>
    <fullName>Voted_For__c</fullName>
    <description>Candidate / Nominee chosen</description>
    <inlineHelpText>Candidate / Nominee chosen</inlineHelpText>
    <label>Voted For</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>